# Maternal_Health_Telemedicine_Llama

./: requirements.txt
AfyaMum-Backend/: env.sample  requirements.txt
AfyaMum-Backend/AfyaMum/: Pipfile  README.md  manage.py  pyproject.toml  requirements.txt
AfyaMum-Backend/AfyaMum/AfyaMum/: asgi.py  settings.py  urls.py  wsgi.py
AfyaMum-Backend/AfyaMum/afyamum/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
AfyaMum-Backend/AfyaMum/afyamum/migrations/: 0001_initial.py
AfyaMum-Backend/AfyaMum/authentication/: admin.py  models.py  models_V1.py  serializers.py  urls.py  view_drf.py  views.py
AfyaMum-Backend/AfyaMum/authentication/migrations/: 0001_initial.py  0002_remove_useraccount_end_time_and_more.py  0003_delete_useraccount_delete_mother_delete_specialist.py
AfyaMum-Backend/AfyaMum/core/: admin.py  models.py  permission.py  serializers.py  urls.py  view_drf.py  views.py
AfyaMum-Backend/AfyaMum/core/migrations/: 0001_initial.py  0002_session_exchange.py  0003_session_creator.py
AfyaMum-Backend/AfyaMum_Bot/: manage.py  requirements.txt
AfyaMum-Backend/AfyaMum_Bot/AfyaMum_Bot/: asgi.py  settings.py  urls.py  wsgi.py
AfyaMum-Backend/AfyaMum_Bot/Llama/: ingest.py  model.py
AfyaMum-Backend/AfyaMum_Bot/bot/: urls.py  views.py
AfyaMum-Backend/afyamum/: models.py  views.py  voicecall.py
